[package]
name = "tf2_imgui_rs"
version = "0.1.0"
edition = "2021"
authors = ["nepcat"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.86" }
thiserror = { version = "1.0.61" }

env_logger = { version = "0.11.3" }
log = { version = "0.4.21" }

lazy_static = { version = "1.4.0" }
once_cell = { version = "1.19.0" }

parking_lot = { version = "0.12.3", features = ["nightly"] }

scopeguard = { version = "1.2.0" }

retour = { version = "0.3.1", features = ["thiscall-abi"] }

ctor = { version = "0.2.8" }

c_str_macro = { version = "1.0.3" }

cfg-if = { version = "1.0.0" }

sdl2-sys = { version = "0.36.0" }
imgui_rs = { path = "./external/imgui_rs/", features = [
    "freetype",
    "sdl2",
    "gl3",
] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.155" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.56.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
    "Graphics_DirectX",
]

[features]
developer = []
